added more divs and margins adjusted

--- a/test.html
+++ b/test.html
@@ -1,19 +1,6 @@
 <html>
   <style type='text/css'>
     /*<![CDATA[*/
-      .left_container{
-        background: red;
-        float: left;
-      }
-      .center_container{
-        background: red;
-        width: 60%;
-      }
-      .right_container{
-        background: red;
-        float:right;
-      }
-      
       .body{
         margin: 0px;
         padding: 0px;
@@ -21,6 +8,41 @@
       h1{
         padding: 0px;
         margin: 0px;
+      }
+      .left_container{
+        background: green;
+        float: left;
+        width: 20%;
+        height: 100%;
+      }
+      .center_container{
+        background: blue;
+        float: left;
+        width: 60%;
+        height: 100%;
+      }
+      .right_container{
+        background: red;
+        float:right;
+        width: 20%;
+        height: 100%;
+      }
+      .center_inner{
+        background: pink;
+        width: 90%;
+        margin-left: 5%;
+      }
+      .center_upper{
+        background: orange;
+        height: 70%;
+      }
+      .center_mid{
+        background: gray;
+        height: 20%;
+      }
+      .center_footer{
+        background: purple;
+        height: 10%;
       }
     /*]]>*/
   </style>
@@ -31,9 +53,23 @@
       </h1>
     </div>
     <div class='center_container'>
-      <h1>
-        center title
-      </h1>
+      <div class='center_inner'>
+        <div class='center_upper'>
+          <h1>
+            center title
+          </h1>
+        </div>
+        <div class='center_mid'>
+          <h1>
+            center mid
+          </h1>
+        </div>
+        <div class='center_footer'>
+          <h1>
+            center footer
+          </h1>
+        </div>
+      </div>
     </div>
     <div class='right_container'>
       <h1>
