--- a/test.html
+++ b/test.html
@@ -36,6 +36,13 @@
         background: orange;
         height: 70%;
       }
+      .center_upper_imagebox{
+        background: #ff22a2;
+        width: 50%;
+        margin-left: 25%;
+        margin-top: 10%;
+        height: 50%;
+      }
       .center_mid{
         background: gray;
         height: 20%;
@@ -58,11 +65,21 @@
           <h1>
             center title
           </h1>
+          <div class='center_upper_imagebox'>
+            <h1>
+              imagebox
+            </h1>
+          </div>
         </div>
         <div class='center_mid'>
           <h1>
             center mid
           </h1>
+          <div class='text_area'>
+            <h1>
+              text area center mid div
+            </h1>
+          </div>
         </div>
         <div class='center_footer'>
           <h1>
