added footer text and mid div text

--- a/test.html
+++ b/test.html
@@ -4,27 +4,28 @@
       .body{
         margin: 0px;
         padding: 0px;
+        font-size: 1.3em;
       }
-      h1{
+      h1, hr{
         padding: 0px;
         margin: 0px;
       }
       .left_container{
         background: green;
         float: left;
-        width: 20%;
+        width: 18%;
         height: 130%;
       }
       .center_container{
         background: blue;
         float: left;
-        width: 60%;
+        width: 64%;
         height: 130%;
       }
       .right_container{
         background: red;
         float:right;
-        width: 20%;
+        width: 18%;
         height: 130%;
       }
       .center_inner{
@@ -34,7 +35,7 @@
       }
       .center_upper{
         background: orange;
-        height: 70%;
+        height: 55%;
       }
       .center_upper_imagebox{
         background: #ff22a2;
@@ -45,7 +46,14 @@
       }
       .center_mid{
         background: gray;
-        height: 20%;
+        height: 35%;
+      }
+      .huge_text{
+        font-size: 4em;
+      }
+      .text_area.larger{
+        font-size: 2em;
+        padding-top: 15px;
       }
       .center_footer{
         background: purple;
@@ -72,19 +80,45 @@
           </div>
         </div>
         <div class='center_mid'>
-          <h1>
-            center mid
-          </h1>
-          <div class='text_area'>
-            <h1>
-              text area center mid div
-            </h1>
+          <div class='huge_text'>
+            Airfare Up.
+          </div>
+          <div class='huge_text'>
+            Cab fare down.
+          </div>
+          <div class='text_area larger'>
+            Banglore airport transfer for only Rs.500/-
+          </div>
+          <div class='text_area larger'>
+            To Book a car call 3355 3355
+          </div>
+          <div class='text_area larger'>
+            Use code Airport500
           </div>
         </div>
+        <hr />
         <div class='center_footer'>
-          <h1>
-            center footer
-          </h1>
+          <table>
+            <tr>
+              <td>
+                Track your cab on app
+                |
+              </td>
+              <td>
+                Same cab fare 24X7
+                |
+              </td>
+              <td>
+                Download the app from
+              </td>
+              <td>
+                <img />
+              </td>
+              <td>
+                <img />
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
