added image div

--- a/test.html
+++ b/test.html
@@ -48,6 +48,16 @@
         background: gray;
         height: 35%;
       }
+      .right{
+        float: right;
+        height: 25%;
+        background: red;
+        margin-top: 26.5%;
+      }
+      .left{
+        float: left;
+        background: white;
+      }
       .huge_text{
         font-size: 4em;
       }
@@ -80,20 +90,32 @@
           </div>
         </div>
         <div class='center_mid'>
-          <div class='huge_text'>
-            Airfare Up.
+          <div class='left'>
+            <div class='huge_text'>
+              Airfare Up.
+            </div>
+            <div class='huge_text'>
+              Cab fare down.
+            </div>
+            <div class='text_area larger'>
+              Banglore airport transfer for only Rs.500/-
+            </div>
+            <div class='text_area larger'>
+              To Book a cab  call 3355 3355
+            </div>
+            <div class='text_area larger'>
+              Use code Airport500
+            </div>
           </div>
-          <div class='huge_text'>
-            Cab fare down.
-          </div>
-          <div class='text_area larger'>
-            Banglore airport transfer for only Rs.500/-
-          </div>
-          <div class='text_area larger'>
-            To Book a car call 3355 3355
-          </div>
-          <div class='text_area larger'>
-            Use code Airport500
+          <div class='right'>
+            <div class='logo'>
+              <h1>
+                another div
+              </h1>
+            </div>
+            <div class='bottom_text'>
+              Be independent
+            </div>
           </div>
         </div>
         <hr />
