--- a/test.html
+++ b/test.html
@@ -1,77 +1,81 @@
 <html>
-  <style type='text/css'>
-    /*<![CDATA[*/
-      .body{
-        margin: 0px;
-        padding: 0px;
-        font-size: 1.3em;
-      }
-      h1, hr{
-        padding: 0px;
-        margin: 0px;
-      }
-      .left_container{
-        background: green;
-        float: left;
-        width: 18%;
-        height: 130%;
-      }
-      .center_container{
-        background: blue;
-        float: left;
-        width: 64%;
-        height: 130%;
-      }
-      .right_container{
-        background: red;
-        float:right;
-        width: 18%;
-        height: 130%;
-      }
-      .center_inner{
-        background: pink;
-        width: 90%;
-        margin-left: 5%;
-      }
-      .center_upper{
-        background: orange;
-        height: 55%;
-      }
-      .center_upper_imagebox{
-        background: #ff22a2;
-        width: 50%;
-        margin-left: 25%;
-        margin-top: 10%;
-        height: 50%;
-      }
-      .center_mid{
-        background: gray;
-        height: 35%;
-      }
-      .right{
-        float: right;
-        height: 25%;
-        background: red;
-        margin-top: 26.5%;
-      }
-      .left{
-        float: left;
-        background: white;
-      }
-      .huge_text{
-        font-size: 4em;
-      }
-      .text_area.larger{
-        font-size: 2em;
-        padding-top: 15px;
-      }
-      .center_footer{
-        background: purple;
-        height: 10%;
-      }
-    /*]]>*/
-  </style>
   <body>
+    <style type='text/css'>
+      /*<![CDATA[*/
+        .body{
+          margin: 0px;
+          padding: 0px;
+          font-size: 1.3em;
+          height: 100%;
+        }
+        h1, hr{
+          padding: 0px;
+          margin: 0px;
+        }
+        body{
+          height: 100%;
+        }
+        .left_container{
+          background: green;
+          float: left;
+          width: 18%;
+          height: 130%;
+        }
+        .center_container{
+          background: blue;
+          float: left;
+          width: 64%;
+          height: 130%;
+        }
+        .right_container{
+          background: red;
+          float:right;
+          width: 18%;
+          height: 130%;
+        }
+        .center_inner{
+          background: pink;
+          width: 90%;
+          margin-left: 5%;
+        }
+        .center_upper{
+          background: orange;
+          height: 60%;
+        }
+        .center_upper_imagebox{
+          background: #ff22a2;
+          width: 50%;
+          margin-left: 25%;
+          margin-top: 7%;
+          height: 70%;
+        }
+        .center_mid{
+          background: gray;
+          height: 35%;
+        }
+        .right{
+          float: right;
+          height: 25%;
+          background: red;
+          margin-top: 26.5%;
+        }
+        .left{
+          float: left;
+          background: white;
+        }
+        .huge_text{
+          font-size: 4em;
+        }
+        .text_area.larger{
+          font-size: 1.6em;
+          padding-top: 15px;
+        }
+        .center_footer{
+          background: purple;
+          height: 10%;
+        }
+      /*]]>*/
+    </style>
     <div class='left_container'>
       <h1>
         left title
