--- a/test.html
+++ b/test.html
@@ -15,6 +15,9 @@
           height: 700px;
           width: 100%;
         }
+        table.footer_table{
+        height: 30px;
+        }
         td.left_main_table{
         
         }
@@ -57,10 +60,8 @@
           height: 35%;
         }
         .right{
-          float: right;
           height: 25%;
           background: red;
-          margin-top: 26.5%;
         }
         .left{
           float: left;
@@ -75,7 +76,6 @@
         }
         .center_footer{
           background: purple;
-          height: 10%;
         }
       /*]]>*/
     </style>
