--- a/test.html
+++ b/test.html
@@ -15,6 +15,15 @@
           height: 700px;
           width: 100%;
         }
+        img{
+          height: 80px;
+        }
+        img.app_store{
+          height: 30px;
+        }
+        img.play_store{
+          height: 30px;
+        }
         table.footer_table{
         height: 30px;
         }
@@ -119,16 +128,7 @@
                     Use code Airport500
                   </div>
                 </div>
-                <div class='right'>
-                  <div class='logo'>
-                    <h1>
-                      another div
-                    </h1>
-                  </div>
-                  <div class='bottom_text'>
-                    Be independent
-                  </div>
-                </div>
+                <img alt='Ola cabs logo' src='olacabs_final_logo.png' />
               </div>
               <hr />
               <div class='center_footer'>
@@ -146,10 +146,10 @@
                       Download the app from
                     </td>
                     <td>
-                      <img />
+                      <img alt='google play logo' class='play_store' src='google_play.jpg' />
                     </td>
                     <td>
-                      <img />
+                      <img alt='apple app store logo' class='app_store' src='app_store.png' />
                     </td>
                   </tr>
                 </table>
