--- a/test.html
+++ b/test.html
@@ -12,8 +12,12 @@
           font-size: 1.3em;
         }
         table{
-          height: 700px;
           width: 100%;
+          border: 0px;
+        }
+        table.text_logo_table{
+          height: 100px;
+          background: transparent;
         }
         img{
           height: 80px;
@@ -25,7 +29,10 @@
           height: 30px;
         }
         table.footer_table{
-        height: 30px;
+          height: 30px;
+        }
+        table.center_upper_table{
+          
         }
         td.left_main_table{
         
@@ -42,27 +49,13 @@
         }
         .center_container{
           background: blue;
-          height: 130%;
         }
         .right_container{
           background: red;
           height: 130%;
         }
-        .center_inner{
-          background: pink;
-          width: 90%;
-          margin-left: 5%;
-        }
         .center_upper{
           background: orange;
-          height: 60%;
-        }
-        .center_upper_imagebox{
-          background: #ff22a2;
-          width: 50%;
-          margin-left: 25%;
-          margin-top: 7%;
-          height: 70%;
         }
         .center_mid{
           background: gray;
@@ -73,14 +66,13 @@
           background: red;
         }
         .left{
-          float: left;
           background: white;
         }
         .huge_text{
           font-size: 4em;
         }
         .text_area.larger{
-          font-size: 1.6em;
+          font-size: 2em;
           padding-top: 15px;
         }
         .center_footer{
@@ -97,63 +89,72 @@
             </h1>
           </div>
         </td>
-        <td class='center_main_table'>
+        <td class='center_main_table' width='900px'>
           <div class='center_container'>
-            <div class='center_inner'>
-              <div class='center_upper'>
-                <h1>
-                  center title
-                </h1>
-                <div class='center_upper_imagebox'>
-                  <h1>
-                    imagebox
-                  </h1>
-                </div>
-              </div>
-              <div class='center_mid'>
-                <div class='left'>
-                  <div class='huge_text'>
-                    Airfare Up.
-                  </div>
-                  <div class='huge_text'>
-                    Cab fare down.
-                  </div>
-                  <div class='text_area larger'>
-                    Banglore airport transfer for only Rs.500/-
-                  </div>
-                  <div class='text_area larger'>
-                    To Book a cab  call 3355 3355
-                  </div>
-                  <div class='text_area larger'>
-                    Use code Airport500
-                  </div>
-                </div>
-                <img alt='Ola cabs logo' src='olacabs_final_logo.png' />
-              </div>
-              <hr />
-              <div class='center_footer'>
-                <table class='footer_table'>
-                  <tr>
-                    <td>
-                      Track your cab on app
-                      |
-                    </td>
-                    <td>
-                      Same cab fare 24X7
-                      |
-                    </td>
-                    <td>
-                      Download the app from
-                    </td>
-                    <td>
-                      <img alt='google play logo' class='play_store' src='google_play.jpg' />
-                    </td>
-                    <td>
-                      <img alt='apple app store logo' class='app_store' src='app_store.png' />
-                    </td>
-                  </tr>
-                </table>
-              </div>
+            <div class='center_upper'>
+              <table class='center_upper_table'>
+                <tr>
+                  <td height='700px'>
+                    <div class='center_upper_imagebox'>
+                      <h1>
+                        imagebox
+                      </h1>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class='center_mid'>
+              <table class='text_logo_table'>
+                <tr>
+                  <td width='900px'>
+                    <div class='left'>
+                      <div class='huge_text'>
+                        Airfare Up.
+                      </div>
+                      <div class='huge_text'>
+                        Cab fare down.
+                      </div>
+                      <div class='text_area larger'>
+                        Banglore airport transfer for only Rs.500/-
+                      </div>
+                      <div class='text_area larger'>
+                        To Book a cab  call 3355 3355
+                      </div>
+                      <div class='text_area larger'>
+                        Use code Airport500
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    <img alt='Ola cabs logo' src='olacabs_final_logo.png' />
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <hr />
+            <div class='center_footer'>
+              <table class='footer_table'>
+                <tr>
+                  <td>
+                    Track your cab on app
+                    |
+                  </td>
+                  <td>
+                    Same cab fare 24X7
+                    |
+                  </td>
+                  <td>
+                    Download the app from
+                  </td>
+                  <td>
+                    <img alt='google play logo' class='play_store' src='google_play.jpg' />
+                  </td>
+                  <td>
+                    <img alt='apple app store logo' class='app_store' src='app_store.png' />
+                  </td>
+                </tr>
+              </table>
             </div>
           </div>
         </td>
