--- a/test.html
+++ b/test.html
@@ -19,6 +19,9 @@
           width: 100%;
           border: 0px;
         }
+        table.footer_table{
+          text-align: center;
+        }
         table.text_logo_table{
           height: 100px;
           background: transparent;
@@ -89,9 +92,7 @@
       <tr>
         <td class='left_main_table'>
           <div class='left_container'>
-            <h1>
-              left title
-            </h1>
+            <h1></h1>
           </div>
         </td>
         <td class='center_main_table' width='900px'>
@@ -132,7 +133,9 @@
                     </div>
                   </td>
                   <td align='center'>
-                    <img alt='Ola cabs logo' id='logo' src='olacabs_final_logo.png' />
+                    <a href='http://www.olacabs.com'>
+                      <img alt='Ola cabs logo' id='logo' src='olacabs_final_logo.png' />
+                    </a>
                     <span class='logo_text'>
                       Be independent
                     </span>
@@ -145,12 +148,10 @@
               <table class='footer_table'>
                 <tr>
                   <td>
-                    Track your cab on app
-                    |
+                    Track your cab on app  
                   </td>
                   <td>
-                    Same cab fare 24X7
-                    |
+                    Same cab fare 24X7  
                   </td>
                   <td>
                     Download the app from
@@ -168,9 +169,7 @@
         </td>
         <td class='right_main_table'>
           <div class='right_container'>
-            <h1>
-              right title
-            </h1>
+            <h1></h1>
           </div>
         </td>
       </tr>
