added non breaking spaces in footer and links to apps

--- a/test.html
+++ b/test.html
@@ -157,10 +157,14 @@
                     Download the app from
                   </td>
                   <td>
-                    <img alt='google play logo' class='play_store' src='google_play.jpg' />
+                    <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
+                      <img alt='google play logo' class='play_store' src='google_play.jpg' />
+                    </a>
                   </td>
                   <td>
-                    <img alt='apple app store logo' class='app_store' src='app_store.png' />
+                    <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
+                      <img alt='apple app store logo' class='app_store' src='app_store.png' />
+                    </a>
                   </td>
                 </tr>
               </table>
