--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
           margin: 0px;
         }
         hr{
-          width: 95%;
-          color: black;
+          width: 90%;
+          margin-left: 40px;
         }
         body{
           margin: 0px;
@@ -21,6 +21,8 @@
         }
         table.footer_table{
           text-align: center;
+          width: 850px;
+          padding-left: 40px;
         }
         table.text_logo_table{
           height: 100px;
@@ -34,7 +36,7 @@
         }
         img#logo{
           margin-top: 200px;
-          padding-right: 20px;
+          padding-right: 60px;
         }
         img.app_store{
           height: 30px;
@@ -74,7 +76,7 @@
           height: 25%;
         }
         .left{
-          padding: 30px;
+          padding: 50px;
         }
         .huge_text{
           font-size: 4em;
@@ -147,21 +149,21 @@
             <div class='center_footer'>
               <table class='footer_table'>
                 <tr>
-                  <td>
-                    Track your cab on app   	&nbsp;  &nbsp; 	&nbsp;|
+                  <td width='190px;'>
+                    Track your cab on app&nbsp;&nbsp;&nbsp;|
                   </td>
-                  <td>
-                    Same cab fare 24X7 	        &nbsp; 	&nbsp; 	&nbsp;|
+                  <td width='170px;'>
+                    Same cab fare 24X7&nbsp;&nbsp;&nbsp;|
                   </td>
-                  <td>
+                  <td width='190px;'>
                     Download the app from
                   </td>
-                  <td>
+                  <td width='100px;'>
                     <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
                       <img alt='google play logo' class='play_store' src='google_play.jpg' />
                     </a>
                   </td>
-                  <td>
+                  <td width='100px;'>
                     <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
                       <img alt='apple app store logo' class='app_store' src='app_store.png' />
                     </a>
