--- a/test.html
+++ b/test.html
@@ -53,12 +53,6 @@
         }
         td.center_main_table{
         
-          background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background: red;
         }
         td.right_main_table{
         
@@ -118,7 +112,7 @@
                 <tr>
                   <td height='500px'>
                     <div class='center_upper_imagebox'>
-                      <img alt='center logo image' class='center_image' src='http://i2.listal.com/image/1632733/500full.jpg' />
+                      <img alt='center logo image' class='center_image' src='image_path' />
                     </div>
                   </td>
                 </tr>
@@ -130,30 +124,28 @@
                   <td width='900px'>
                     <div class='left'>
                       <div class='huge_text'>
-                        Airfare Up.
-                      </div>
-                      <div class='huge_text'>
                         Cab fare down.
                       </div>
-                      <div class='text_area larger'>
-                        Banglore airport transfer for only Rs.500/-
+                      <div class='huge_text'>
+                        Lorem Ipsum
                       </div>
                       <div class='text_area larger'>
-                        To Book a cab  call 3355 3355
+                        Lorem Ipsum Lorem Ipsum Lorem Ipsum
                       </div>
                       <div class='text_area larger'>
-                        Use code Airport500
+                        Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                      </div>
+                      <div class='text_area larger'>
+                        Lorem Ipsum Lorem Ipsum Lorem Ipsum
                       </div>
                     </div>
                   </td>
                   <td align='center'>
                     <div class='right'>
-                      <a href='http://www.olacabs.com'>
-                        <img alt='Ola cabs logo' id='logo' src='olacabs_final_logo.png' />
+                      <a href='http://www.google.com'>
+                        <img alt='logo' id='logo' src='image.png' />
                       </a>
-                      <span class='logo_text'>
-                        Be independent
-                      </span>
+                      <span class='logo_text'></span>
                     </div>
                   </td>
                 </tr>
@@ -173,13 +165,13 @@
                     Download the app from
                   </td>
                   <td width='100px;'>
-                    <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
-                      <img alt='google play logo' class='play_store' src='google_play.png' />
+                    <a href='https://google.com'>
+                      <img alt='google play logo' class='play_store' src='image.png' />
                     </a>
                   </td>
                   <td width='100px;'>
-                    <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
-                      <img alt='apple app store logo' class='app_store' src='app_store.png' />
+                    <a href='http://google.com'>
+                      <img alt='apple app store logo' class='app_store' src='image.png' />
                     </a>
                   </td>
                 </tr>
