center image padding chrome issue fixed

--- a/test.html
+++ b/test.html
@@ -18,9 +18,6 @@
         table{
           width: 100%;
         }
-        td{
-          border: solid;
-        }
         table.footer_table{
           text-align: center;
           width: 850px;
@@ -51,14 +48,6 @@
           background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
           background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #98D72B 120%) repeat scroll 0 0 #98D72B;
         }
-        .center_container{
-          -# background: rgb(152, 215, 43);
-          -# background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        }
         .right{
           margin-top: 200px;
           padding-right: 60px;
@@ -76,8 +65,10 @@
         .center_footer{
           padding-bottom: 50px;
         }
-        td.imagebox{
-        
+        .center_upper_imagebox{
+          padding-left: 220px;
+          height: 240px;
+          max-height: 240px;
         }
       /*]]>*/
     </style>
@@ -95,7 +86,7 @@
                 <tr>
                   <td class='imagebox' height='500px'>
                     <div class='center_upper_imagebox'>
-                      <img alt='central image' class='center_image' src='http://i2.listal.com/image/1632733/500full.jpg' />
+                      <img alt='central image' class='center_image' src='&lt;image link goes here&gt;' />
                     </div>
                   </td>
                 </tr>
@@ -103,37 +94,41 @@
             </div>
             <div class='center_mid'>
               <table class='text_logo_table'>
-                <tr>
-                  <td width='900px'>
-                    <div class='left'>
-                      <div class='huge_text'>
-                        Airfare Up.
-                      </div>
-                      <div class='huge_text'>
-                        Cab fare down.
-                      </div>
-                      <div class='text_area larger'>
-                        Banglore airport transfer for only Rs.500/-
-                      </div>
-                      <div class='text_area larger'>
-                        To Book a cab  call 3355 3355
-                      </div>
-                      <div class='text_area larger'>
-                        Use code Airport500
-                      </div>
-                    </div>
-                  </td>
-                  <td align='center'>
-                    <div class='right'>
-                      <a href='http://www.olacabs.com'>
-                        <img alt='Ola cabs logo' id='logo' src='olacabs_final_logo.png' />
-                      </a>
-                      <span class='logo_text'>
-                        Be independent
-                      </span>
-                    </div>
-                  </td>
-                </tr>
+                <col width='1500'>
+                  <col width='100'>
+                    <tr>
+                      <td>
+                        <div class='left'>
+                          <div class='huge_text'>
+                            Airfare Up.
+                          </div>
+                          <div class='huge_text'>
+                            Cab fare down.
+                          </div>
+                          <div class='text_area larger'>
+                            Banglore airport transfer for only Rs.500/-
+                          </div>
+                          <div class='text_area larger'>
+                            To Book a cab  call 3355 3355
+                          </div>
+                          <div class='text_area larger'>
+                            Use code Airport500
+                          </div>
+                        </div>
+                      </td>
+                      <td align='center'>
+                        <div class='right'>
+                          <a href='http://www.olacabs.com'>
+                            <img alt='Ola cabs logo' id='logo' src='&lt;image link goes here&gt;' />
+                          </a>
+                          <span class='logo_text'>
+                            Be independent
+                          </span>
+                        </div>
+                      </td>
+                    </tr>
+                  </col>
+                </col>
               </table>
             </div>
             <hr />
@@ -149,14 +144,14 @@
                   <td width='190px;'>
                     Download the app from
                   </td>
-                  <td>
+                  <td cellpadding='50px'>
                     <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
-                      <img alt='google play logo' class='play_store' src='google_play.png' />
+                      <img alt='google play logo' class='play_store' src='&lt;image link goes here&gt;' />
                     </a>
                   </td>
                   <td>
                     <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
-                      <img alt='apple app store logo' class='app_store' src='app_store.png' />
+                      <img alt='apple app store logo' class='app_store' src='&lt;image link goes here&gt;' />
                     </a>
                   </td>
                 </tr>
