--- a/test.html
+++ b/test.html
@@ -18,9 +18,6 @@
         table{
           width: 100%;
         }
-        td{
-          border: solid;
-        }
         table.footer_table{
           text-align: center;
           width: 850px;
@@ -60,14 +57,6 @@
           background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
           background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #98D72B 120%) repeat scroll 0 0 #98D72B;
         }
-        .center_container{
-          -# background: rgb(152, 215, 43);
-          -# background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          -# background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        }
         .right{
           margin-top: 200px;
           padding-right: 60px;
@@ -85,8 +74,10 @@
         .center_footer{
           padding-bottom: 50px;
         }
-        td.imagebox{
-        
+        .center_upper_imagebox{
+          padding-left: 220px;
+          height: 240px;
+          max-height: 240px;
         }
       /*]]>*/
     </style>
