removed local image links

--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
         hr{
           width: 90%;
           margin-left: 40px;
+          color: black;
         }
         body{
           margin: 0px;
