removed local image links

--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
         hr{
           width: 90%;
           margin-left: 40px;
+          color: black;
         }
         body{
           margin: 0px;
@@ -86,7 +87,7 @@
                 <tr>
                   <td class='imagebox' height='500px'>
                     <div class='center_upper_imagebox'>
-                      <img alt='central image' class='center_image' src='&lt;image link goes here&gt;' />
+                      <img alt='new updated price image: large' class='center_image' src='&lt;image link goes here&gt;' />
                     </div>
                   </td>
                 </tr>
