fixed be independent

--- a/test.html
+++ b/test.html
@@ -87,7 +87,7 @@
                 <tr>
                   <td class='imagebox' height='500px'>
                     <div class='center_upper_imagebox'>
-                      <img alt='new updated price image: large' class='center_image' src='&lt;image link goes here&gt;' />
+                      <img alt='new updated price image: large' class='center_image' src='http://www.olacabs.com/img/campaigns/large_center_image.png' />
                     </div>
                   </td>
                 </tr>
@@ -95,41 +95,39 @@
             </div>
             <div class='center_mid'>
               <table class='text_logo_table'>
-                <col width='1500'>
-                  <col width='100'>
-                    <tr>
-                      <td>
-                        <div class='left'>
-                          <div class='huge_text'>
-                            Airfare Up.
-                          </div>
-                          <div class='huge_text'>
-                            Cab fare down.
-                          </div>
-                          <div class='text_area larger'>
-                            Banglore airport transfer for only Rs.500/-
-                          </div>
-                          <div class='text_area larger'>
-                            To Book a cab  call 3355 3355
-                          </div>
-                          <div class='text_area larger'>
-                            Use code Airport500
-                          </div>
-                        </div>
-                      </td>
-                      <td align='center'>
-                        <div class='right'>
-                          <a href='http://www.olacabs.com'>
-                            <img alt='Ola cabs logo' id='logo' src='&lt;image link goes here&gt;' />
-                          </a>
-                          <span class='logo_text'>
-                            Be independent
-                          </span>
-                        </div>
-                      </td>
-                    </tr>
-                  </col>
-                </col>
+                <tr>
+                  <td>
+                    <div class='left'>
+                      <div class='huge_text'>
+                        Airfare Up.
+                      </div>
+                      <div class='huge_text'>
+                        Cab fare down.
+                      </div>
+                      <div class='text_area larger'>
+                        Banglore airport transfer for only Rs.500/-
+                      </div>
+                      <div class='text_area larger'>
+                        To Book a cab  call 3355 3355
+                      </div>
+                      <div class='text_area larger'>
+                        Use code Airport500
+                      </div>
+                    </div>
+                  </td>
+                  <td align='center'>
+                    <div class='right'>
+                      <a href='http://www.olacabs.com'>
+                        <img alt='Ola cabs logo' id='logo' src='http://www.olacabs.com/img/campaigns/olacabs_final_logo.png' />
+                      </a>
+                      <span class='logo_text'>
+                        <br>
+                          Be independent
+                        </br>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
               </table>
             </div>
             <hr />
@@ -147,12 +145,12 @@
                   </td>
                   <td cellpadding='50px'>
                     <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
-                      <img alt='google play logo' class='play_store' src='&lt;image link goes here&gt;' />
+                      <img alt='google play logo' class='play_store' src='http://www.olacabs.com/img/campaigns/google_play.png' />
                     </a>
                   </td>
                   <td>
                     <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
-                      <img alt='apple app store logo' class='app_store' src='&lt;image link goes here&gt;' />
+                      <img alt='apple app store logo' class='app_store' src='http://www.olacabs.com/img/campaigns/app_store.png' />
                     </a>
                   </td>
                 </tr>
