image links added again

--- a/test.html
+++ b/test.html
@@ -28,17 +28,19 @@
           height: 100px;
           background: transparent;
         }
-        
-        img{
-          height: 80px;
-        }
         img.app_store{
+          height: 80px;
           max-height: 30px;
           max-width: 130px;
         }
         img.play_store{
+          height: 80px;
           max-height: 30px;
           max-width: 130px;
+        }
+        img.ola_logo{
+          height: 80px;
+          max-height: 80px;
         }
         td.center_main_table{
           background: rgb(152, 215, 43);
@@ -67,9 +69,7 @@
           padding-bottom: 50px;
         }
         .center_upper_imagebox{
-          padding-left: 220px;
-          height: 240px;
-          max-height: 240px;
+          padding-left: 280px;
         }
       /*]]>*/
     </style>
@@ -87,7 +87,7 @@
                 <tr>
                   <td class='imagebox' height='500px'>
                     <div class='center_upper_imagebox'>
-                      <img alt='new updated price image: large' class='center_image' src='http://www.olacabs.com/img/campaigns/large_center_image.png' />
+                      <img alt='Airfare element' class='large_center' src='http://www.olacabs.com/img/campaigns/airfare_small.png' />
                     </div>
                   </td>
                 </tr>
@@ -118,11 +118,11 @@
                   <td align='center'>
                     <div class='right'>
                       <a href='http://www.olacabs.com'>
-                        <img alt='Ola cabs logo' id='logo' src='http://www.olacabs.com/img/campaigns/olacabs_final_logo.png' />
+                        <img alt='Ola cabs logo' class='ola_logo' id='logo' src='http://www.olacabs.com/img/campaigns/olacabs_final_logo.png' />
                       </a>
                       <span class='logo_text'>
                         <br>
-                          Be independent
+                          Be Independent
                         </br>
                       </span>
                     </div>
