fixed height and width dimensions

--- a/test.html
+++ b/test.html
@@ -7,9 +7,9 @@
           margin: 0px;
         }
         hr{
-          width: 90%;
-          margin-left: 40px;
-          color: black;
+          width: 98%;
+          color: #000;
+          background-color: #000;
         }
         body{
           margin: 0px;
@@ -22,25 +22,10 @@
         table.footer_table{
           text-align: center;
           width: 850px;
-          padding-left: 40px;
         }
         table.text_logo_table{
           height: 100px;
           background: transparent;
-        }
-        img.app_store{
-          height: 80px;
-          max-height: 30px;
-          max-width: 130px;
-        }
-        img.play_store{
-          height: 80px;
-          max-height: 30px;
-          max-width: 130px;
-        }
-        img.ola_logo{
-          height: 80px;
-          max-height: 80px;
         }
         td.center_main_table{
           background: rgb(152, 215, 43);
@@ -59,10 +44,10 @@
           padding-left: 50px;
         }
         .huge_text{
-          font-size: 4em;
+          font-size: 3em;
         }
         .text_area.larger{
-          font-size: 1.6em;
+          font-size: 1.5em;
           padding-top: 15px;
         }
         .center_footer{
@@ -80,12 +65,12 @@
             <h1></h1>
           </div>
         </td>
-        <td class='center_main_table' width='900px'>
+        <td class='center_main_table' width='650px'>
           <div class='center_container'>
             <div class='center_upper'>
               <table class='center_upper_table'>
                 <tr>
-                  <td class='imagebox' height='500px'>
+                  <td class='imagebox' height='300px'>
                     <div class='center_upper_imagebox'>
                       <img alt='Airfare element' class='large_center' src='http://www.olacabs.com/img/campaigns/airfare_small.png' />
                     </div>
@@ -108,7 +93,7 @@
                         Banglore airport transfer for only Rs.500/-
                       </div>
                       <div class='text_area larger'>
-                        To Book a cab  call 3355 3355
+                        To book a cab  call 3355 3355
                       </div>
                       <div class='text_area larger'>
                         Use code Airport500
