--- a/test.html
+++ b/test.html
@@ -60,10 +60,11 @@
           padding-top: 15px;
         }
         .center_footer{
-          padding-bottom: 50px;
+          padding-bottom: 10px;
         }
         .center_upper_imagebox{
           padding-left: 280px;
+          padding-top: 40px;
         }
       /*]]>*/
     </style>
