added T&C in footer

--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
         }
         table{
           width: 100%;
-        }
+        }      
         table.footer_table{
           text-align: center;
           width: 850px;
@@ -26,6 +26,11 @@
         table.text_logo_table{
           height: 100px;
           background: transparent;
+        }
+        span.terms{
+          float: right;
+          padding: 5px;
+          font-size: 0.9em;
         }
         td.center_main_table{
           background: rgb(152, 215, 43);
@@ -141,6 +146,9 @@
                   </td>
                 </tr>
               </table>
+              <span class='terms'>
+                *T&C apply
+              </span>
             </div>
           </div>
         </td>
