capitalized logo text

--- a/test.html
+++ b/test.html
@@ -15,6 +15,7 @@
           margin: 0px;
           padding: 0px;
           font-size: 1.3em;
+          font-family: stag-sans, arial;
         }
         table{
           width: 100%;
@@ -32,6 +33,9 @@
           padding: 5px;
           font-size: 0.9em;
         }
+        span.logo_text{
+          font-size: 0.8em;
+        }
         td.center_main_table{
         
         }
@@ -43,12 +47,12 @@
         }
         .center_container{
           background: rgb(152, 215, 43);
-          background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-          background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #98D72B 120%) repeat scroll 0 0 #98D72B;
+          background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
+          background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
+          background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
+          background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
+          background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
+          background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #C8D724 120%) repeat scroll 0 0 #C8D724;
         }
         .right{
           margin-top: 200px;
@@ -58,7 +62,7 @@
           padding-left: 50px;
         }
         .huge_text{
-          font-size: 3em;
+          font-size: 3.5em;
         }
         .text_area.larger{
           font-size: 1.5em;
