--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang='en' xmlns='http://www.w3.org/1999/xhtml'>
   <body>
     <style type='text/css'>
@@ -84,8 +85,8 @@
             <h1></h1>
           </div>
         </td>
-        <td class='center_main_table' width='650px'>
-          <div class='center_container'>
+        <td class='center_main_table' style="background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')" width='650px'>
+          <div class='center_container' style="background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')">
             <div class='center_upper'>
               <table class='center_upper_table'>
                 <tr>
@@ -155,10 +156,10 @@
                   </td>
                 </tr>
               </table>
-              <span class='terms'>
-                *T&C apply
-              </span>
             </div>
+            <span class='terms'>
+              *T&C apply
+            </span>
           </div>
         </td>
         <td class='right_main_table'>
