--- a/test.html
+++ b/test.html
@@ -29,10 +29,10 @@
           height: 100px;
           background: transparent;
         }
-        span.terms{
-          float: right;
+        .terms{
           padding: 5px;
           font-size: 0.9em;
+          margin-left: 750px;
         }
         span.logo_text{
           font-size: 0.8em;
@@ -76,7 +76,7 @@
             <h1></h1>
           </div>
         </td>
-        <td class='center_main_table' style="background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')" width='650px'>
+        <td class='center_main_table' width='650px'>
           <div class='center_container' style="background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')">
             <div class='center_upper'>
               <table class='center_upper_table'>
@@ -159,10 +159,10 @@
                   </td>
                 </tr>
               </table>
+              <div class='terms'>
+                T&C Apply
+              </div>
             </div>
-            <span class='terms'>
-              *T&C apply
-            </span>
           </div>
         </td>
         <td class='right_main_table'>
